<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalculatorActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        app:title="Saudi Calculator"
        app:titleCentered="true" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="9dp"
        android:gravity="center"
        android:hint="@string/first_number"
        app:titleCentered="true" />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="9dp"
        android:gravity="center"
        android:hint="@string/second_number"
        app:titleCentered="true" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="31dp"
            android:layout_toStartOf="@+id/minus_button"
            android:text="@string/plus_button" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/minus_button" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="31dp"
            android:layout_toStartOf="@+id/divide_button"
            android:text="@string/multiply_button" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/divide_button" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/equal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="="
            app:titleCentered="true">

        </Button>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Result"
        android:textAllCaps="true"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="120dp"
        android:gravity="center"
        android:hint="@string/_0"
        android:paddingBottom="15dp">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="44dp"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="Development By Hammed Ashraf Saudi">

        </TextView>
    </RelativeLayout>


</LinearLayout>